--- a/build.gradle
+++ b/build.gradle
@@ -72,6 +72,9 @@ dependencies {
     //cloud
     implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE'
 
+    //cool sms
+    implementation 'net.nurigo:sdk:4.3.0'
+
     //QueryDsl
     implementation 'com.querydsl:querydsl-jpa:5.0.0:jakarta'
     annotationProcessor "com.querydsl:querydsl-apt:${dependencyManagement.importedProperties['querydsl.version']}:jakarta"
