Feat/#128/Querydsl 사용을 통한 추가 및 테스트 코드 추가 (#130)
* [feat] comment 페이징에서 Querydsl을 사용하도록 수정

* [test] drawHistoryService 테스트 클래스 생성

* [test] drawPrizeService 테스트 클래스 수정

* [test] drawProbabilityService 테스트 클래스 수정

* [test] drawRewardInfoService 테스트 클래스 생성

* [test] drawService 테스트 클래스 수정

* [test] QuizServiceTest 클래스 수정

* [test] CommentServiceTest 클래스 수정

--- a/build.gradle
+++ b/build.gradle
@@ -34,6 +34,10 @@ jacocoTestReport {
         exclude '**/enum/**'
         exclude '**/global/**/domain/**'
         exclude '**/softeer/team_pineapple_be/global/**/exception'
+        exclude '**/softeer/team_pineapple_be/global/cloud/**'
+        exclude '**/softeer/team_pineapple_be/domain/draw/service/DrawService$ImageUrls*'
+        exclude '**/softeer/team_pineapple_be/global/auth/interceptor/**'
+        exclude '**/softeer/team_pineapple_be/global/message/**'
     }))
 }
 
