Feat/#131/동시성 이슈 발생할 수 있는 곳에 분산락 처리 (#132)
* [FIX] JWT 초기화 로직 추가

* [FEAT] 퀴즈 선착순 상품 이미지 전송 분산락 처리

* [FEAT] 퀴즈 참여 여부 저장 분산락 처리

* [FEAT] 일자별 상품 수령 정보 초기화

* [FIX] 분산락 적용을 위한 컨트롤러 수정

* [FEAT] 경품 추첨 분산락 처리

* [FEAT] 경품 확률 캐시 초기화

* [FEAT] 분산락 적용한 응모락 서비스 추가

* [FIX] 분산락 적용을 위한 응모 컨트롤러 수정

* [FIX] 분산락 시간 수정

* [FIX] 충돌 해결

* [FEAT] 좋아요 증가 분산락 처리 추가

* [FIX] 분산락 처리를 위한 컨트롤러 수정

* [FIX] 테스트 코드 충돌 해결

* [FEAT] S3 Role 사용하도록 라이브러리 추가

* [FEAT] S3 Role 사용하도록 설정 수정

* [FEAT] hikariCP 설정

* [FIX] 코드 변경에 따른 테스트 코드 변경

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,6 +3,12 @@ spring.application.name: team_pineapple_be
 spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
+    hikari:
+      minimum-idle: 10  # 풀 내에서 유지할 최소 커넥션 수
+      maximum-pool-size: 30  # 최대 커넥션 수
+      idle-timeout: 600000  # 10분 동안 사용되지 않으면 커넥션을 닫음
+      max-lifetime: 1800000  # 커넥션의 최대 수명은 30분
+      connection-timeout: 30000
   config:
     import: application-secret.yml
 
