Test/#135/테스트 코드 최종 수정 (#136)
* [test] 테스트 코드 수정

* [test] 테스트 코드 수정 및 추가

* [test] 테스트 코드 수정 및 추가

--- a/build.gradle
+++ b/build.gradle
@@ -38,6 +38,7 @@ jacocoTestReport {
         exclude '**/softeer/team_pineapple_be/domain/draw/service/DrawService$ImageUrls*'
         exclude '**/softeer/team_pineapple_be/global/auth/interceptor/**'
         exclude '**/softeer/team_pineapple_be/global/message/**'
+        exclude '**/softeer/team_pineapple_be/domain/admin/controller/**'
     }))
 }
 
