Feat/#137/글로벌 캐시와 로컬 캐시 적용 (#138)
* [FEAT] 스프링 캐시 활성화

* [FEAT] 레디스 캐시 설정

* [FEAT] 퀴즈 문제 캐싱

* [FEAT] 퀴즈 콘텐츠 캐시 Evict Scheduling

* [FEAT] 좋아요 Top10 툴박스 제공 로직 수행 여부 확인 메서드 추가

* [FEAT] 경품 확률 캐싱

* [FIX] 로직 수정에 따른 테스트 코드 수정

* [FEAT] 스케일 아웃 서버에서 스케줄 기능의 정상동작을 위해 분산락 적용

* [DELETE] CommentLockServiceTest 삭제

* [FEAT] caffeineCache 용 CacheType 추가

* [FEAT] caffeineCache 설정

* [FEAT] 캐시, 액추에이터 추가

* [FEAT] 액추에이터 설정

* [FIX] 선착순 로직 LUA SCRIPT 사용 안하게 변경

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -21,6 +21,11 @@ springdoc:
   paths-to-match:
     - /**
 
+management:
+  endpoints:
+    web:
+      exposure:
+        include: health,metrics
 
 server:
   servlet:
